chore: change directory modeling notebook to main directory

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -32,6 +32,18 @@
    "source": [
     "### Split Data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pre-processing Test Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
