--- a/clean.ipynb
+++ b/clean.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "[2 rows x 22 columns]"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "       '6.4\" - Tần số quét 90 Hz', '6.5”', '6.53\"', '5\"'], dtype=object)"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "       4.7 , 1.77, 6.28, 2.4 , 6.53])"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "Name: Screen type, dtype: int64"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "Name: Chip, dtype: int64"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "       '16 MB', '6GB', 'Không', 'Đang cập nhật'], dtype=object)"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "       '4 GB', '16 GB'], dtype=object)"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "          16.,    nan])"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "                nan, 4.096000e+03, 1.638400e+04])"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "       '1150 mAh'], dtype=object)"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
        "       4250., 1000., 1900., 5050., 2000., 1150.])"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "       'Không có', 'Android 10'], dtype=object)"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "Name: OS, dtype: int64"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
        "       'HD+', 'HD (720 x 1280 Pixels)'], dtype=object)"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "         38720.,  921600.])"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "       'QVGA (320 x 240 pixels), VGA (0.3 MP)'], dtype=object)"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "array([5, 2, 4, 3, 1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
        "         3.])"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
        "Name: Mobile network, dtype: int64"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "       '890,000 ₫', '790,000 ₫'], dtype=object)"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
        "        2640,  3090,   890,   790], dtype=int64)"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
        "272          2527200.0  20990             5.0             4           50.0  "
       ]
      },
-     "execution_count": 301,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
        "[898 rows x 12 columns]"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
        "      <td>5681.197279</td>\n",
        "      <td>4096.0</td>\n",
        "      <td>1900.0</td>\n",
-       "      <td>android</td>\n",
+       "      <td>ios</td>\n",
        "      <td>76800.0</td>\n",
        "      <td>890</td>\n",
        "      <td>4.0</td>\n",
@@ -1919,7 +1919,7 @@
        "      <td>2048.000000</td>\n",
        "      <td>16384.0</td>\n",
        "      <td>2000.0</td>\n",
-       "      <td>android</td>\n",
+       "      <td>ios</td>\n",
        "      <td>921600.0</td>\n",
        "      <td>790</td>\n",
        "      <td>4.0</td>\n",
@@ -1955,8 +1955,8 @@
        "1516  android          1120000.0   2090             4.0             2   \n",
        "1517  android          1152000.0   2640             4.0             4   \n",
        "1518  android          1152000.0   2890             4.0             4   \n",
-       "1523  android            76800.0    890             4.0             1   \n",
-       "1524  android           921600.0    790             4.0             2   \n",
+       "1523      ios            76800.0    890             4.0             1   \n",
+       "1524      ios           921600.0    790             4.0             2   \n",
        "\n",
        "      Camera max MP  \n",
        "268           108.0  \n",
@@ -1974,7 +1974,7 @@
        "[898 rows x 12 columns]"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2180,11 +2180,11 @@
        "      <th>1523</th>\n",
        "      <td>2.400000</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>exynos</td>\n",
+       "      <td>apple</td>\n",
        "      <td>5681.197279</td>\n",
        "      <td>4096.0</td>\n",
        "      <td>1900.0</td>\n",
-       "      <td>android</td>\n",
+       "      <td>ios</td>\n",
        "      <td>76800.0</td>\n",
        "      <td>890</td>\n",
        "      <td>4.0</td>\n",
@@ -2195,11 +2195,11 @@
        "      <th>1524</th>\n",
        "      <td>6.001272</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>exynos</td>\n",
+       "      <td>apple</td>\n",
        "      <td>2048.000000</td>\n",
        "      <td>16384.0</td>\n",
        "      <td>2000.0</td>\n",
-       "      <td>android</td>\n",
+       "      <td>ios</td>\n",
        "      <td>921600.0</td>\n",
        "      <td>790</td>\n",
        "      <td>4.0</td>\n",
@@ -2222,8 +2222,8 @@
        "1516     6.530000         LCD    mediatek  2048.000000   32768.0  5000.0   \n",
        "1517     6.530000         LCD    mediatek  3072.000000   65536.0  5000.0   \n",
        "1518     6.530000         LCD    mediatek  4096.000000  131072.0  5000.0   \n",
-       "1523     2.400000         LCD      exynos  5681.197279    4096.0  1900.0   \n",
-       "1524     6.001272         LCD      exynos  2048.000000   16384.0  2000.0   \n",
+       "1523     2.400000         LCD       apple  5681.197279    4096.0  1900.0   \n",
+       "1524     6.001272         LCD       apple  2048.000000   16384.0  2000.0   \n",
        "\n",
        "           OS  Screen resolution  Price  Mobile network  Camera count  \\\n",
        "268   android          2592000.0   5990             4.0             5   \n",
@@ -2235,8 +2235,8 @@
        "1516  android          1120000.0   2090             4.0             2   \n",
        "1517  android          1152000.0   2640             4.0             4   \n",
        "1518  android          1152000.0   2890             4.0             4   \n",
-       "1523  android            76800.0    890             4.0             1   \n",
-       "1524  android           921600.0    790             4.0             2   \n",
+       "1523      ios            76800.0    890             4.0             1   \n",
+       "1524      ios           921600.0    790             4.0             2   \n",
        "\n",
        "      Camera max MP  \n",
        "268           108.0  \n",
@@ -2254,7 +2254,7 @@
        "[898 rows x 12 columns]"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
