--- a/clean.ipynb
+++ b/clean.ipynb
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ✂️ Remove rows with 'Price' is NaN"
+    "### ✂️ Remove rows with *'Price'* is *NaN*"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ✂️ Remove rows with 'Mobile network' has 2G"
+    "### ✂️ Remove rows with *'Mobile network'* has *2G*"
    ]
   },
   {
@@ -1904,7 +1904,7 @@
        "      <td>5681.197279</td>\n",
        "      <td>4096.0</td>\n",
        "      <td>1900.0</td>\n",
-       "      <td>ios</td>\n",
+       "      <td>android</td>\n",
        "      <td>76800.0</td>\n",
        "      <td>890</td>\n",
        "      <td>4.0</td>\n",
@@ -1919,7 +1919,7 @@
        "      <td>2048.000000</td>\n",
        "      <td>16384.0</td>\n",
        "      <td>2000.0</td>\n",
-       "      <td>ios</td>\n",
+       "      <td>android</td>\n",
        "      <td>921600.0</td>\n",
        "      <td>790</td>\n",
        "      <td>4.0</td>\n",
@@ -1955,8 +1955,8 @@
        "1516  android          1120000.0   2090             4.0             2   \n",
        "1517  android          1152000.0   2640             4.0             4   \n",
        "1518  android          1152000.0   2890             4.0             4   \n",
-       "1523      ios            76800.0    890             4.0             1   \n",
-       "1524      ios           921600.0    790             4.0             2   \n",
+       "1523  android            76800.0    890             4.0             1   \n",
+       "1524  android           921600.0    790             4.0             2   \n",
        "\n",
        "      Camera max MP  \n",
        "268           108.0  \n",
@@ -2180,11 +2180,11 @@
        "      <th>1523</th>\n",
        "      <td>2.400000</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>apple</td>\n",
+       "      <td>exynos</td>\n",
        "      <td>5681.197279</td>\n",
        "      <td>4096.0</td>\n",
        "      <td>1900.0</td>\n",
-       "      <td>ios</td>\n",
+       "      <td>android</td>\n",
        "      <td>76800.0</td>\n",
        "      <td>890</td>\n",
        "      <td>4.0</td>\n",
@@ -2195,11 +2195,11 @@
        "      <th>1524</th>\n",
        "      <td>6.001272</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>apple</td>\n",
+       "      <td>exynos</td>\n",
        "      <td>2048.000000</td>\n",
        "      <td>16384.0</td>\n",
        "      <td>2000.0</td>\n",
-       "      <td>ios</td>\n",
+       "      <td>android</td>\n",
        "      <td>921600.0</td>\n",
        "      <td>790</td>\n",
        "      <td>4.0</td>\n",
@@ -2222,8 +2222,8 @@
        "1516     6.530000         LCD    mediatek  2048.000000   32768.0  5000.0   \n",
        "1517     6.530000         LCD    mediatek  3072.000000   65536.0  5000.0   \n",
        "1518     6.530000         LCD    mediatek  4096.000000  131072.0  5000.0   \n",
-       "1523     2.400000         LCD       apple  5681.197279    4096.0  1900.0   \n",
-       "1524     6.001272         LCD       apple  2048.000000   16384.0  2000.0   \n",
+       "1523     2.400000         LCD      exynos  5681.197279    4096.0  1900.0   \n",
+       "1524     6.001272         LCD      exynos  2048.000000   16384.0  2000.0   \n",
        "\n",
        "           OS  Screen resolution  Price  Mobile network  Camera count  \\\n",
        "268   android          2592000.0   5990             4.0             5   \n",
@@ -2235,8 +2235,8 @@
        "1516  android          1120000.0   2090             4.0             2   \n",
        "1517  android          1152000.0   2640             4.0             4   \n",
        "1518  android          1152000.0   2890             4.0             4   \n",
-       "1523      ios            76800.0    890             4.0             1   \n",
-       "1524      ios           921600.0    790             4.0             2   \n",
+       "1523  android            76800.0    890             4.0             1   \n",
+       "1524  android           921600.0    790             4.0             2   \n",
        "\n",
        "      Camera max MP  \n",
        "268           108.0  \n",
