--- a/clean.ipynb
+++ b/clean.ipynb
@@ -20,138 +20,39 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Screen size</th>\n",
-       "      <th>Screen type</th>\n",
-       "      <th>Rear camera</th>\n",
-       "      <th>Front camera</th>\n",
-       "      <th>Chip</th>\n",
-       "      <th>RAM</th>\n",
-       "      <th>ROM</th>\n",
-       "      <th>Batery</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Screen resolution</th>\n",
-       "      <th>Screen feature</th>\n",
-       "      <th>CPU type</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Bluetooth</th>\n",
-       "      <th>Refesh rate</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Camera</th>\n",
-       "      <th>Mobile network</th>\n",
-       "      <th>Screen</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Samsung Galaxy A73 (5G)</td>\n",
-       "      <td>6.7 inches</td>\n",
-       "      <td>Super AMOLED</td>\n",
-       "      <td>Camera chính: 108 MP, f/1.8, PDAF, OIS  Camera...</td>\n",
-       "      <td>32 MP, f/2.2</td>\n",
-       "      <td>Snapdragon 778G 5G 8 nhân</td>\n",
-       "      <td>8 GB</td>\n",
-       "      <td>256 GB</td>\n",
-       "      <td>5000 mAh</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1080 x 2400 pixels (FullHD+)</td>\n",
-       "      <td>Tần số quét 120 Hz, Kính cường lực Corning Gor...</td>\n",
-       "      <td>Octa-core (2.4 GHz &amp; 1.8 GHz)</td>\n",
-       "      <td>181 g</td>\n",
-       "      <td>v5.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.190.000 ₫</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>iPhone 11 64GB I Chính hãng VN/A</td>\n",
-       "      <td>6.1 inches</td>\n",
-       "      <td>IPS LCD</td>\n",
-       "      <td>Camera kép 12MP:- Camera góc rộng: ƒ/1.8 apert...</td>\n",
-       "      <td>12 MP, ƒ/2.2 aperture</td>\n",
-       "      <td>A13 Bionic</td>\n",
-       "      <td>4 GB</td>\n",
-       "      <td>64 GB</td>\n",
-       "      <td>3110 mAh</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1792 x 828 pixel</td>\n",
-       "      <td>True-tone</td>\n",
-       "      <td>Hexa-core</td>\n",
-       "      <td>194 g</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>60Hz</td>\n",
-       "      <td>11.490.000 ₫</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0                              Name Screen size   Screen type  \\\n",
-       "0           0           Samsung Galaxy A73 (5G)  6.7 inches  Super AMOLED   \n",
-       "1           1  iPhone 11 64GB I Chính hãng VN/A  6.1 inches       IPS LCD   \n",
-       "\n",
-       "                                         Rear camera           Front camera  \\\n",
-       "0  Camera chính: 108 MP, f/1.8, PDAF, OIS  Camera...           32 MP, f/2.2   \n",
-       "1  Camera kép 12MP:- Camera góc rộng: ƒ/1.8 apert...  12 MP, ƒ/2.2 aperture   \n",
-       "\n",
-       "                        Chip   RAM     ROM    Batery  ...  \\\n",
-       "0  Snapdragon 778G 5G 8 nhân  8 GB  256 GB  5000 mAh  ...   \n",
-       "1                 A13 Bionic  4 GB   64 GB  3110 mAh  ...   \n",
-       "\n",
-       "              Screen resolution  \\\n",
-       "0  1080 x 2400 pixels (FullHD+)   \n",
-       "1              1792 x 828 pixel   \n",
-       "\n",
-       "                                      Screen feature  \\\n",
-       "0  Tần số quét 120 Hz, Kính cường lực Corning Gor...   \n",
-       "1                                          True-tone   \n",
-       "\n",
-       "                        CPU type Weight Bluetooth Refesh rate         Price  \\\n",
-       "0  Octa-core (2.4 GHz & 1.8 GHz)  181 g      v5.0         NaN  10.190.000 ₫   \n",
-       "1                      Hexa-core  194 g       5.0        60Hz  11.490.000 ₫   \n",
-       "\n",
-       "  Camera Mobile network Screen  \n",
-       "0    NaN            NaN    NaN  \n",
-       "1    NaN            NaN    NaN  \n",
-       "\n",
-       "[2 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1622 entries, 0 to 1621\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column             Non-Null Count  Dtype \n",
+      "---  ------             --------------  ----- \n",
+      " 0   Unnamed: 0         1622 non-null   int64 \n",
+      " 1   Name               1622 non-null   object\n",
+      " 2   Screen size        875 non-null    object\n",
+      " 3   Screen type        1427 non-null   object\n",
+      " 4   Rear camera        360 non-null    object\n",
+      " 5   Front camera       359 non-null    object\n",
+      " 6   Chip               1364 non-null   object\n",
+      " 7   RAM                1466 non-null   object\n",
+      " 8   ROM                1454 non-null   object\n",
+      " 9   Batery             1336 non-null   object\n",
+      " 10  SIM                1357 non-null   object\n",
+      " 11  OS                 1375 non-null   object\n",
+      " 12  Screen resolution  1341 non-null   object\n",
+      " 13  Screen feature     188 non-null    object\n",
+      " 14  CPU type           222 non-null    object\n",
+      " 15  Weight             245 non-null    object\n",
+      " 16  Bluetooth          258 non-null    object\n",
+      " 17  Refesh rate        174 non-null    object\n",
+      " 18  Price              1613 non-null   object\n",
+      " 19  Camera             1083 non-null   object\n",
+      " 20  Mobile network     946 non-null    object\n",
+      " 21  Screen             96 non-null     object\n",
+      "dtypes: int64(1), object(21)\n",
+      "memory usage: 278.9+ KB\n"
+     ]
     }
    ],
    "source": [
@@ -164,7 +65,7 @@
     "\n",
     "data = pd.concat(raw_data_files, ignore_index=True)\n",
     "\n",
-    "data.head(2)"
+    "data.info()"
    ]
   },
   {
@@ -1365,24 +1266,129 @@
        "      <td>4</td>\n",
        "      <td>50.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1516</th>\n",
+       "      <td>6.53</td>\n",
+       "      <td>LCD</td>\n",
+       "      <td>mediatek</td>\n",
+       "      <td>2048.0</td>\n",
+       "      <td>32768.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>android</td>\n",
+       "      <td>1120000.0</td>\n",
+       "      <td>2090</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1517</th>\n",
+       "      <td>6.53</td>\n",
+       "      <td>LCD</td>\n",
+       "      <td>mediatek</td>\n",
+       "      <td>3072.0</td>\n",
+       "      <td>65536.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>android</td>\n",
+       "      <td>1152000.0</td>\n",
+       "      <td>2640</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1518</th>\n",
+       "      <td>6.53</td>\n",
+       "      <td>LCD</td>\n",
+       "      <td>mediatek</td>\n",
+       "      <td>4096.0</td>\n",
+       "      <td>131072.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>android</td>\n",
+       "      <td>1152000.0</td>\n",
+       "      <td>2890</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523</th>\n",
+       "      <td>2.40</td>\n",
+       "      <td>LCD</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4096.0</td>\n",
+       "      <td>1900.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>76800.0</td>\n",
+       "      <td>890</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1524</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCD</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2048.0</td>\n",
+       "      <td>16384.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>921600.0</td>\n",
+       "      <td>790</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>898 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Screen size Screen type        Chip     RAM       ROM  Batery       OS  \\\n",
-       "268         6.67        OLED  snapdragon  8192.0  131072.0  5020.0  android   \n",
-       "269          NaN        OLED  snapdragon  8192.0  131072.0  3300.0  android   \n",
-       "270         6.10        OLED  snapdragon  8192.0  131072.0  3700.0  android   \n",
-       "271         6.10        OLED  snapdragon  8192.0  262144.0  3700.0  android   \n",
-       "272         6.60        OLED  snapdragon  8192.0  262144.0  4500.0  android   \n",
+       "      Screen size Screen type        Chip     RAM       ROM  Batery       OS  \\\n",
+       "268          6.67        OLED  snapdragon  8192.0  131072.0  5020.0  android   \n",
+       "269           NaN        OLED  snapdragon  8192.0  131072.0  3300.0  android   \n",
+       "270          6.10        OLED  snapdragon  8192.0  131072.0  3700.0  android   \n",
+       "271          6.10        OLED  snapdragon  8192.0  262144.0  3700.0  android   \n",
+       "272          6.60        OLED  snapdragon  8192.0  262144.0  4500.0  android   \n",
+       "...           ...         ...         ...     ...       ...     ...      ...   \n",
+       "1516         6.53         LCD    mediatek  2048.0   32768.0  5000.0  android   \n",
+       "1517         6.53         LCD    mediatek  3072.0   65536.0  5000.0  android   \n",
+       "1518         6.53         LCD    mediatek  4096.0  131072.0  5000.0  android   \n",
+       "1523         2.40         LCD        None     NaN    4096.0  1900.0     None   \n",
+       "1524          NaN         LCD        None  2048.0   16384.0  2000.0     None   \n",
        "\n",
-       "     Screen resolution  Price  Mobile network  Camera count  Camera max MP  \n",
-       "268          2592000.0   5990             4.0             5          108.0  \n",
-       "269          2851200.0  20990             5.0             2           12.0  \n",
-       "270          2527200.0  16990             5.0             4           50.0  \n",
-       "271          2527200.0  18490             5.0             4           50.0  \n",
-       "272          2527200.0  20990             5.0             4           50.0  "
+       "      Screen resolution  Price  Mobile network  Camera count  Camera max MP  \n",
+       "268           2592000.0   5990             4.0             5          108.0  \n",
+       "269           2851200.0  20990             5.0             2           12.0  \n",
+       "270           2527200.0  16990             5.0             4           50.0  \n",
+       "271           2527200.0  18490             5.0             4           50.0  \n",
+       "272           2527200.0  20990             5.0             4           50.0  \n",
+       "...                 ...    ...             ...           ...            ...  \n",
+       "1516          1120000.0   2090             4.0             2           13.0  \n",
+       "1517          1152000.0   2640             4.0             4           13.0  \n",
+       "1518          1152000.0   2890             4.0             4           13.0  \n",
+       "1523            76800.0    890             4.0             1            3.0  \n",
+       "1524           921600.0    790             4.0             2            5.0  \n",
+       "\n",
+       "[898 rows x 12 columns]"
       ]
      },
      "execution_count": 33,
@@ -1391,7 +1397,7 @@
     }
    ],
    "source": [
-    "data.head()"
+    "data"
    ]
   },
   {
@@ -1904,7 +1910,7 @@
        "      <td>5681.197279</td>\n",
        "      <td>4096.0</td>\n",
        "      <td>1900.0</td>\n",
-       "      <td>android</td>\n",
+       "      <td>ios</td>\n",
        "      <td>76800.0</td>\n",
        "      <td>890</td>\n",
        "      <td>4.0</td>\n",
@@ -1919,7 +1925,7 @@
        "      <td>2048.000000</td>\n",
        "      <td>16384.0</td>\n",
        "      <td>2000.0</td>\n",
-       "      <td>android</td>\n",
+       "      <td>ios</td>\n",
        "      <td>921600.0</td>\n",
        "      <td>790</td>\n",
        "      <td>4.0</td>\n",
@@ -1955,8 +1961,8 @@
        "1516  android          1120000.0   2090             4.0             2   \n",
        "1517  android          1152000.0   2640             4.0             4   \n",
        "1518  android          1152000.0   2890             4.0             4   \n",
-       "1523  android            76800.0    890             4.0             1   \n",
-       "1524  android           921600.0    790             4.0             2   \n",
+       "1523      ios            76800.0    890             4.0             1   \n",
+       "1524      ios           921600.0    790             4.0             2   \n",
        "\n",
        "      Camera max MP  \n",
        "268           108.0  \n",
@@ -2180,11 +2186,11 @@
        "      <th>1523</th>\n",
        "      <td>2.400000</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>exynos</td>\n",
+       "      <td>apple</td>\n",
        "      <td>5681.197279</td>\n",
        "      <td>4096.0</td>\n",
        "      <td>1900.0</td>\n",
-       "      <td>android</td>\n",
+       "      <td>ios</td>\n",
        "      <td>76800.0</td>\n",
        "      <td>890</td>\n",
        "      <td>4.0</td>\n",
@@ -2195,11 +2201,11 @@
        "      <th>1524</th>\n",
        "      <td>6.001272</td>\n",
        "      <td>LCD</td>\n",
-       "      <td>exynos</td>\n",
+       "      <td>apple</td>\n",
        "      <td>2048.000000</td>\n",
        "      <td>16384.0</td>\n",
        "      <td>2000.0</td>\n",
-       "      <td>android</td>\n",
+       "      <td>ios</td>\n",
        "      <td>921600.0</td>\n",
        "      <td>790</td>\n",
        "      <td>4.0</td>\n",
@@ -2222,8 +2228,8 @@
        "1516     6.530000         LCD    mediatek  2048.000000   32768.0  5000.0   \n",
        "1517     6.530000         LCD    mediatek  3072.000000   65536.0  5000.0   \n",
        "1518     6.530000         LCD    mediatek  4096.000000  131072.0  5000.0   \n",
-       "1523     2.400000         LCD      exynos  5681.197279    4096.0  1900.0   \n",
-       "1524     6.001272         LCD      exynos  2048.000000   16384.0  2000.0   \n",
+       "1523     2.400000         LCD       apple  5681.197279    4096.0  1900.0   \n",
+       "1524     6.001272         LCD       apple  2048.000000   16384.0  2000.0   \n",
        "\n",
        "           OS  Screen resolution  Price  Mobile network  Camera count  \\\n",
        "268   android          2592000.0   5990             4.0             5   \n",
@@ -2235,8 +2241,8 @@
        "1516  android          1120000.0   2090             4.0             2   \n",
        "1517  android          1152000.0   2640             4.0             4   \n",
        "1518  android          1152000.0   2890             4.0             4   \n",
-       "1523  android            76800.0    890             4.0             1   \n",
-       "1524  android           921600.0    790             4.0             2   \n",
+       "1523      ios            76800.0    890             4.0             1   \n",
+       "1524      ios           921600.0    790             4.0             2   \n",
        "\n",
        "      Camera max MP  \n",
        "268           108.0  \n",
