--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -16,9 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1670, 12)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -157,7 +164,7 @@
        "4  27000  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +177,8 @@
     "# move column 'Price' to the end of the dataframe\n",
     "data = data[['Screen size', 'Screen type', 'Chip', 'RAM', 'ROM', 'Batery', 'OS', 'Screen resolution', 'Mobile network', 'Camera count', 'Camera max MP', 'Price']]\n",
     "\n",
-    "data.head()"
+    "print(data.shape)\n",
+    "data.head()\n"
    ]
   },
   {
@@ -789,7 +797,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -803,12 +811,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
